# educational-practice

./: .gitignore  LICENSE  README.md  pyproject.toml  report.tex
.github/workflows/: mypy.yml  ruff.yml  test.yml  tests.yml
client/: .env.example  app.py  auth.py  config.py  database.py  oauth.py  oauth2.py  utils.py
client/src/: app.py  auth.py  config.py  database.py  oauth.py  utils.py
client/templates/: 400.html  404.html  base.html  dashboard.html  login.html  register.html
client/tests/: conftest.py  test_auth.py  test_auth_functions.py  test_oauth.py  test_routes.py  test_utils.py
docs/: report.tex
provider/: .env.example  app.py  config.py  database.py  utils.py
provider/src/: app.py  config.py  crypto.py  database.py
provider/templates/: 400.html  404.html  base.html  dashboard.html  login_form.html  register_app_form.html  register_app_result.html  register_user.html
provider/templates/components/: flash_messages.html
provider/tests/: conftest.py  test_app_management.py  test_auth.py  test_oauth.py  test_registration.py
