[project]
name = "educational-practice"
version = "0.1.0"
description = "Educational practice dedicated to OAuth2 and OpenID Connect"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "pyjwt>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "coverage>=7.0.0",
]
