[project]
name = "educational-practice"
version = "0.1.0"
description = "Educational practice dedicated to OAuth2 and OpenID Connect"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "pyjwt>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "coverage>=7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "UP"]
ignore = ["RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["client", "provider"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false